--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 		<div class="nav-container">
 			<div class="nav-title">Интерактивная карта</div>
 			<div class="nav-links">
-				<a href="#" class="nav-link">Карта</a>
-				<a href="#" class="nav-link">Гайды</a>
-				<a href="#" class="nav-link">Телеграм</a>
+				<a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
+				<a href="https://mifiliya.github.io/" class="nav-link">Гайды</a>
+				<a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
 			</div>
 		</div>
 	</nav>
