--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 
-<body>
+<body class="ripples">
 
 	<svg width="0" height="0" style="position: absolute;">
 		<!-- <symbol id="custom-marker" viewBox="0 0 52 70">
