Add specific files via script

--- a/index.html
+++ b/index.html
@@ -117,14 +117,20 @@
 			</a>
 				
 			<!-- Квесты Парня -->
-			<a href="https://discord.com/channels/1175566322462109746/1246562173178875996" target="”_blank”">
-				<g class="marker-container man part" id="quest-giant" transform="translate(423,106)" description-data="<img src='media/giant.png'> Гигант  <hr> Выпадает милый верстак <br><br> <img src='media/bench_pretty.png'>" fill="#4061ef">
+			<!-- Гигант -->
+			<a href="tps://discord.com/channels/1175566322462109746/1246562173178875996" target="”_blank”">
+				<g class="marker-container man part gates" id="quest-giant" transform="translate(423,106)" description-data="Гигант<hr><img src='media/giant.png'>Требования:<br>Открыть врата<hr>Можно получить:<br><br> Рецепт: Милый верстак<br>Сфера Гиганта<br>Компаньена: Гигант " fill="#4061ef">
 					<use href="#man-marker" width="60" height="70" color="#4061ef"/>
 				</g>
 			</a>
-
+			<path class="quest-path quest-giant" d="m 558.35729,369.82908 33.70038,-14.64357 -2.7001,-30.92839 -65.29326,-29.4556 4.66381,-20.61893 -17.67337,-11.78224 -28.71921,23.31902 -20.37346,-18.90068 6.62751,-25.03726 36.67827,-30.75227 -48.15368,-40.92304 4.17288,-5.33882 53.12973,46.69579 -40.01489,33.95818 -5.33883,19.47838 13.27246,12.41951 28.35103,-22.65091 26.7555,18.65522 -4.78653,18.53249 63.42612,28.5333 0.98185,40.23344 -36.77229,14.90648 z" fill="#4061ef" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
+			<circle class="quest-path quest-giant" r="10" fill="#4061ef" stroke="#d8d5d3" strokewidth="4" style="opacity: 0; transition: opacity 0.25s ease-in-out;">
+    			<animateMotion dur="2s" repeatCount="indefinite" path="m 558.35729,369.82908 33.70038,-14.64357 -2.7001,-30.92839 -65.29326,-29.4556 4.66381,-20.61893 -17.67337,-11.78224 -28.71921,23.31902 -20.37346,-18.90068 6.62751,-25.03726 36.67827,-30.75227 -48.15368,-40.92304 4.17288 z"></animateMotion>
+  			</circle>
+			
+			<!-- Салли -->
 			<a href="#" target="”_blank”">
-				<g class="marker-container man part" id="quest-salli" transform="translate(667,246)" description-data="<img src='media/salli.png'> Салли" fill="#4061ef">
+				<g class="marker-container man part" id="quest-salli" transform="translate(660,235)" description-data="Салли<hr><img src='media/salli.png'> " fill="#4061ef">
 					<use href="#man-marker" width="60" height="70" color="#4061ef"/>
 				</g>
 			</a>
@@ -133,22 +139,21 @@
 			<circle class="quest-path quest-salli" r="10" fill="#4061ef" stroke="#d8d5d3" strokewidth="4">
     			<animateMotion dur="2s" repeatCount="indefinite" path="m 560.63835,374.33165 33.01483,-16.81424 -3.55922,-32.89209 -68.48428,-31.05112 7.73209,-13.13229 -20.49619,-16.93697 -25.28273,17.67336 -21.84624,-21.10985 61.24312,-71.42984 27.61463,13.74594 -0.61366,23.93268 -4.66381,9.69581 -0.73639,-30.43746 -19.3916,-8.95941 -54.86107,62.83862 13.50049,13.86868 25.65092,-15.83239 27.86009,22.4599 -6.87297,9.20488 64.80233,31.41931 80.38926,-28.35102 14.97326 z"></animateMotion>
   			</circle>
-			<!-- <a href="https://discord.com/channels/1175566322462109746/1197888320437501952" target="”_blank”">
-				<path class="quest-path quest-salli" d="m 542.61407,243.40125 8.3313,11.97625 h 2.7771 l 8.85201,-11.62911 -10.06699,-22.56395 z" fill="#3ef757"></path>
-			</a>  -->
-
+			
+			<!-- Шино -->
 			<a href="https://discord.com/channels/1175566322462109746/1246560340834127953" target="”_blank”">
-				<g class="marker-container man part" id="quest-shino" transform="translate(820,355)" description-data="<img src='media/shino.png'> Шино  <hr> Нужен стейк <br><br><img src='media/icon_cook_steak_01.png'>" fill="#4061ef">
+				<g class="marker-container man part" id="quest-shino" transform="translate(825,325)" description-data="<img src='media/shino.png'> Шино  <hr> Нужен стейк <br><br><img src='media/icon_cook_steak_01.png'>" fill="#4061ef">
 					<use href="#man-marker" width="60" height="70" color="#4061ef"/>
 				</g>
 			</a>
-			<path class="quest-path" id="quest-shino-1" d="m 804.94885,371.58953 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395z" fill="#4061ef" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
-
+			<g class="marker-container man part quest-path" id="quest-shino-1" transform="translate(790,295)" description-data="<img src='media/shino.png'> Шино  <hr> Нужен стейк <br><br><img src='media/icon_cook_steak_01.png'>" fill="#4061ef">
+					<use href="#man-marker" width="60" height="70" color="#4061ef"/>
+			</g>
 			<path class="quest-path quest-path-shino" d="m 853.09074,392.61267 42.71027,-16.773 -15.34596,-22.38528 -57.44255,14.38261 -3.0734,-5.85923 62.6409,-16.42331 21.95539,33.37605 -49.01468,19.49671 z" fill="#4061ef" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
 			<circle class="quest-path quest-path-shino" r="10" fill="#4061ef" stroke="#d8d5d3" strokewidth="4" style="opacity: 0; transition: opacity 0.25s ease-in-out;">
     			<animateMotion dur="2s" repeatCount="indefinite" path="m 853.09074,392.61267 42.71027,-16.773 -15.34596,-22.38528 -57.44255,14.38261 -3.0734,-5.85923 62.6409,-16.42331 21.95539,33.37605 -49.01468,19.49671 z"></animateMotion>
   			</circle>
-
+			<!-- Русалка -->
 			<a href="https://discord.com/channels/1175566322462109746/1246577987231547474" target="”_blank”">
 				<g class="marker-container man part" transform="translate(936,1028)" description-data="<img src='media/mermaid.png'> Русалка  <hr> Нужен купальник <br><br><img src='media/icon_cloth_20.png'>" fill="#4061ef">
 					<use href="#man-marker" width="60" height="70" color="#4061ef"/>
@@ -163,13 +168,13 @@
 			</a>
 
 			<a href="#">
-				<g class="marker-container quest part" transform="translate(530,173)" description-data="<img src='media/hell.png'>Строительство моста" fill="#3ef757">
+				<g class="marker-container quest part most" transform="translate(520,170)" description-data="<img src='media/hell.png'>Строительство моста" fill="#3ef757">
 					<use href="#quest-marker" width="60" height="70" color="#4061ef"/>
 				</g>
 			</a>
 
 			<a href="#">
-				<g class="marker-container quest part" id="quest-5" transform="translate(523,317)" description-data="<img src='media/gates.png'> Врата" fill="#3ef757">
+				<g class="marker-container quest part gates" id="gates" transform="translate(527,317)" description-data="<img src='media/gates.png'> Врата" fill="#3ef757">
 					<use href="#quest-marker" width="60" height="70" color="#4061ef"/>
 				</g>
 			</a>
@@ -335,10 +340,7 @@
     			<animateMotion dur="2s" repeatCount="indefinite" path="m 549.34704,389.05945 -92.66243,36.08312 -114.99959,19.39161 -12.76409,-9.94127 -5.27747,-11.04585 2.45464,-7.3639 14.97326,-3.80469 23.56449,-1.71824 1.68114,-12.14622 -14.31943,-5.90134 -1.82247,2.69031 12.67053,5.0335 -1.38855,7.72381 -21.34897,1.1282 -16.66261,5.0335 -3.12423,8.85201 5.72777,14.23264 14.05907,11.1084 116.81182,-18.83221 94.94214,-37.14373 z"></animateMotion>
   			</circle>
 
-			<path class="quest-path quest-giant" d="m 558.35729,369.82908 33.70038,-14.64357 -2.7001,-30.92839 -65.29326,-29.4556 4.66381,-20.61893 -17.67337,-11.78224 -28.71921,23.31902 -20.37346,-18.90068 6.62751,-25.03726 36.67827,-30.75227 -48.15368,-40.92304 4.17288,-5.33882 53.12973,46.69579 -40.01489,33.95818 -5.33883,19.47838 13.27246,12.41951 28.35103,-22.65091 26.7555,18.65522 -4.78653,18.53249 63.42612,28.5333 0.98185,40.23344 -36.77229,14.90648 z" fill="#4061ef" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
-			<circle class="quest-path quest-giant" r="10" fill="#4061ef" stroke="#d8d5d3" strokewidth="4" style="opacity: 0; transition: opacity 0.25s ease-in-out;">
-    			<animateMotion dur="2s" repeatCount="indefinite" path="m 558.35729,369.82908 33.70038,-14.64357 -2.7001,-30.92839 -65.29326,-29.4556 4.66381,-20.61893 -17.67337,-11.78224 -28.71921,23.31902 -20.37346,-18.90068 6.62751,-25.03726 36.67827,-30.75227 -48.15368,-40.92304 4.17288 z"></animateMotion>
-  			</circle>
+			
 
 			
 			
@@ -360,40 +362,10 @@
 			<path class="part" id="quest-4" d="m 646.69054,529.61155 8.3313,11.97625 h 2.7771 l 8.85201,-11.62911 -10.06699,-22.56395 z" fill="#3ef757" description-data="<img src='media/statue.png'> Статуя"></path>
 			</a>
 			
-			
-			
-			
-
-			<path class="quest-path" id="quest-2" d="m 1031.5772,617.48744 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
-			
-			<path class="quest-path" id="quest-3" d="m 1035.0137,416.6984 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
-			
-
-			
-			
 			<path class="quest-path quest-path-3" d="m 698.09785,525.29163 -4.90927,26.75551 -31.66478,2.57736 -3.66833,-13.18313 -2.67776,-0.0868 4.13692,17.07459 36.32858,-3.19102 4.64892,-26.95013 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
 			<circle class="quest-path quest-path-3" r="10" fill="#ec3159" stroke="#d8d5d3" strokewidth="4" style="opacity: 0; transition: opacity 0.25s ease-in-out;">
     			<animateMotion dur="1s" repeatCount="indefinite" path="m 698.09785,525.29163 -4.90927,26.75551 -31.66478,2.57736 -3.66833,-13.18313 -2.67776 z"></animateMotion>
   			</circle>
-			
-			
-			
-			
-			
-			
-			
-			
-
-			
-
-			
-			
-			
-	
-			
-			
-			
-
 			<!-- Сундуки -->
 			<!-- <path class="part chest" d="m 392.55058,274.04886 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#ffd65c" description-data="<img src='media/sand-chest.png'> Песчаный верстак <hr> <img src='media/bench_sand.png'>"></path>
 			<path class="part chest" d="m 955.73418,614.69256 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#ffd65c" description-data="<img src='media/mushroom-chest.png'> Грибной верстак <hr> <img src='media/bench_plant.png'>"></path>
@@ -421,46 +393,46 @@
 			</a>
 			
 			
+			<!-- НА удаление -->
+			<!-- <path class="quest-path" id="quest-reika" d="m 1031.5772,617.48744 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path> -->
 			
-			
+			<!-- <path class="quest-path" id="quest-3" d="m 1035.0137,416.6984 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path> -->
 
-			<path class="quest-path quest-path-1" d="m 1022.1095,760.44554 -58.78847,-34.97853 18.90492,-99.92499 53.11205,-2.90728 4.6864,6.7258 -52.41782,1.38855 -17.70402,90.25578 43.91294,27.07674 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
+			<!-- <path class="quest-path quest-path-1" d="m 1022.1095,760.44554 -58.78847,-34.97853 18.90492,-99.92499 53.11205,-2.90728 4.6864,6.7258 -52.41782,1.38855 -17.70402,90.25578 43.91294,27.07674 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
 			<circle class="quest-path quest-path-1" r="10" fill="#ec3159" stroke="#d8d5d3" strokewidth="4" style="opacity: 0; transition: opacity 0.25s ease-in-out;">
     			<animateMotion dur="2s" repeatCount="indefinite" path="m 1022.1095,760.44554 -58.78847,-34.97853 18.90492,-99.92499 53.11205, -2.90728 4.6864 z"></animateMotion>
-  			</circle>
+  			</circle> -->
 
 			
-			<path class="quest-path quest-path-2" d="m 1036.1009,607.2764 -14.9732,-74.86633 28.7192,-59.40214 -3.6206,-44.79707 4.1115,-5.27746 5.4002,50.07453 -27.2464,59.40214 12.2731,65.29325 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
+			<!-- <path class="quest-path quest-path-2" d="m 1036.1009,607.2764 -14.9732,-74.86633 28.7192,-59.40214 -3.6206,-44.79707 4.1115,-5.27746 5.4002,50.07453 -27.2464,59.40214 12.2731,65.29325 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
 			<circle class="quest-path  quest-path-2" r="10" fill="#ec3159" stroke="#d8d5d3" strokewidth="4" style="opacity: 0; transition: opacity 0.25s ease-in-out;">
     			<animateMotion dur="2s" repeatCount="indefinite" path="m 1035.1009,607.2764 -14.9732,-74.86633 28.7192,-59.40214 -3.6206,-44.79707 4.1115 z"></animateMotion>
-  			</circle>
+  			</circle> -->
 			
-			<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3255809766" target="”_blank”">
-			<path class="part man" id="quest-reika" d="m 1061.0329,667.56196 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#4061ef" description-data="<img src='media/guy-quest-1.png'>Квест Рейки"></path>
-			</a>
+			
 			<a href="https://discord.com/channels/1175566322462109746/1245730989372735622" target="”_blank”">
-				<g class="marker-container man part" transform="translate(1041,607)" description-data="<img src='media/guy-quest-1.png'>Квест Рейки">
+				<g class="marker-container man part " id="quest-reika" transform="translate(1041,607)" description-data="<img src='media/guy-quest-1.png'>Квест Рейки">
 					<use href="#man-marker" width="60" height="70" color="#4061ef"/>
 				</g>
 			</a>
 			
-			<path class="quest-path quest-path-4" d="m 1024.7043,728.43688 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#3ef757"></path>
+			<!-- <path class="quest-path quest-path-4" d="m 1024.7043,728.43688 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#3ef757"></path> -->
 			
-			<path class="quest-path quest-path-4" d="m 1033.769,620.28595 0,39.76507 -3.4365,20.37347 -4.0526,44.796 7.2437,-16.05573 2.9244,-27.16582 3.9485,-22.19338 -0.3681,-31.78751 z" fill="#3ef757"></path>
-			<g class="marker-container quest-path quest-path-4" transform="translate(1013,570)">
-					<use href="#man-marker" width="60" height="70" color="#4061ef"/>
-			</g>
-			<path class="quest-path quest-path-4" d="m 1041.4591,721.67105 -3.3945,-7.12715 26.2646,-42.71063 4.1097,4.71464 z" fill="#4061ef"></path>
-			<g class="marker-container quest-path quest-path-4" transform="translate(1010,350)">
+			<!-- <path class="quest-path quest-path-4" d="m 1033.769,620.28595 0,39.76507 -3.4365,20.37347 -4.0526,44.796 7.2437,-16.05573 2.9244,-27.16582 3.9485,-22.19338 -0.3681,-31.78751 z" fill="#3ef757"></path> -->
+			<g class="marker-container quest-path quest-path-4" id="quest-2" transform="translate(1012,550)">
 					<use href="#yona-marker" width="60" height="70" color="#4061ef"/>
 			</g>
+			<!-- <path class="quest-path quest-path-4" d="m 1041.4591,721.67105 -3.3945,-7.12715 26.2646,-42.71063 4.1097,4.71464 z" fill="#4061ef"></path> -->
+			<!-- <g class="marker-container quest-path quest-path-4" transform="translate(1015,360)">
+					<use href="#yona-marker" width="60" height="70" color="#4061ef"/>
+			</g> -->
 			<circle class="quest-path  quest-path-4" r="10" fill="#4061ef" stroke="#d8d5d3" strokewidth="4">
     			<animateMotion dur="2s" repeatCount="indefinite" path="m 1045.5786,428.02071 4.1656,45.82217 -28.4653,58.14555 15.7948,75.676 -3.1242,53.4592 -3.2979,17.70402 -3.8185,43.91291 11.1084,-7.8106 26.0354,-42.87149 9.1991 z"></animateMotion>
   			</circle>
 
-			<g class="marker-container quest-path quest-path-4" transform="translate(1004,678)">
+			<!-- <g class="marker-container quest-path quest-path-4" transform="translate(1004,658)">
 					<use href="#man-marker" width="60" height="70" color="#4061ef"/>
-			</g>
+			</g> -->
 			
 			
             
