Add specific files via script

--- a/index.html
+++ b/index.html
@@ -393,21 +393,17 @@
 			</a>
 			
 			
-			<!-- НА удаление -->
-			<!-- <path class="quest-path" id="quest-reika" d="m 1031.5772,617.48744 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path> -->
-			
-			<!-- <path class="quest-path" id="quest-3" d="m 1035.0137,416.6984 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path> -->
-
-			<!-- <path class="quest-path quest-path-1" d="m 1022.1095,760.44554 -58.78847,-34.97853 18.90492,-99.92499 53.11205,-2.90728 4.6864,6.7258 -52.41782,1.38855 -17.70402,90.25578 43.91294,27.07674 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
+			<!--  путь от начала квеста рейки ко второй метке через болото -->
+			<path class="quest-path quest-path-1" d="m 1022.1095,760.44554 -58.78847,-34.97853 18.90492,-99.92499 53.11205,-2.90728 4.6864,6.7258 -52.41782,1.38855 -17.70402,90.25578 43.91294,27.07674 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
 			<circle class="quest-path quest-path-1" r="10" fill="#ec3159" stroke="#d8d5d3" strokewidth="4" style="opacity: 0; transition: opacity 0.25s ease-in-out;">
     			<animateMotion dur="2s" repeatCount="indefinite" path="m 1022.1095,760.44554 -58.78847,-34.97853 18.90492,-99.92499 53.11205, -2.90728 4.6864 z"></animateMotion>
-  			</circle> -->
+  			</circle>
 
-			
-			<!-- <path class="quest-path quest-path-2" d="m 1036.1009,607.2764 -14.9732,-74.86633 28.7192,-59.40214 -3.6206,-44.79707 4.1115,-5.27746 5.4002,50.07453 -27.2464,59.40214 12.2731,65.29325 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
+			<!--  путь от второй метки к метки квеста с такуми -->
+			<path class="quest-path quest-path-2" d="m 1036.1009,607.2764 -14.9732,-74.86633 28.7192,-59.40214 -3.6206,-44.79707 4.1115,-5.27746 5.4002,50.07453 -27.2464,59.40214 12.2731,65.29325 z" fill="#ec3159" style="opacity: 0; transition: opacity 0.25s ease-in-out;"></path>
 			<circle class="quest-path  quest-path-2" r="10" fill="#ec3159" stroke="#d8d5d3" strokewidth="4" style="opacity: 0; transition: opacity 0.25s ease-in-out;">
     			<animateMotion dur="2s" repeatCount="indefinite" path="m 1035.1009,607.2764 -14.9732,-74.86633 28.7192,-59.40214 -3.6206,-44.79707 4.1115 z"></animateMotion>
-  			</circle> -->
+  			</circle>
 			
 			
 			<a href="https://discord.com/channels/1175566322462109746/1245730989372735622" target="”_blank”">
@@ -416,23 +412,28 @@
 				</g>
 			</a>
 			
-			<!-- <path class="quest-path quest-path-4" d="m 1024.7043,728.43688 8.3313,11.97625 h 2.7771 l 8.852,-11.62911 -10.067,-22.56395 z" fill="#3ef757"></path> -->
-			
-			<!-- <path class="quest-path quest-path-4" d="m 1033.769,620.28595 0,39.76507 -3.4365,20.37347 -4.0526,44.796 7.2437,-16.05573 2.9244,-27.16582 3.9485,-22.19338 -0.3681,-31.78751 z" fill="#3ef757"></path> -->
-			<g class="marker-container quest-path quest-path-4" id="quest-2" transform="translate(1012,550)">
+			<!--  путь от лагеря рейки -->
+			<path class="quest-path quest-path-4" d="m 1033.769,620.28595 0,39.76507 -3.4365,20.37347 -4.0526,44.796 7.2437,-16.05573 2.9244,-27.16582 3.9485,-22.19338 -0.3681,-31.78751 z" fill="#3ef757"></path>
+			<!--  вторая метка кввеста рейки -->
+			<g class="marker-container quest-path quest-path-4" id="quest-2" transform="translate(1010,560)">
 					<use href="#yona-marker" width="60" height="70" color="#4061ef"/>
 			</g>
-			<!-- <path class="quest-path quest-path-4" d="m 1041.4591,721.67105 -3.3945,-7.12715 26.2646,-42.71063 4.1097,4.71464 z" fill="#4061ef"></path> -->
-			<!-- <g class="marker-container quest-path quest-path-4" transform="translate(1015,360)">
+			
+			<!--  путь от лагеря рейки к квесту парня с рейкой -->
+			<path class="quest-path quest-path-4" d="m 1036.4591,721.67105 -3.3945,-7.12715 26.2646,-42.71063 4.1097,4.71464 z" fill="#4061ef"></path>
+			
+			<!--  метка квеста с такуми -->
+			<g class="marker-container quest-path quest-path-4" transform="translate(1015,355)">
 					<use href="#yona-marker" width="60" height="70" color="#4061ef"/>
-			</g> -->
+			</g>
 			<circle class="quest-path  quest-path-4" r="10" fill="#4061ef" stroke="#d8d5d3" strokewidth="4">
     			<animateMotion dur="2s" repeatCount="indefinite" path="m 1045.5786,428.02071 4.1656,45.82217 -28.4653,58.14555 15.7948,75.676 -3.1242,53.4592 -3.2979,17.70402 -3.8185,43.91291 11.1084,-7.8106 26.0354,-42.87149 9.1991 z"></animateMotion>
   			</circle>
-
-			<!-- <g class="marker-container quest-path quest-path-4" transform="translate(1004,658)">
+			
+			<!--  метка лагеря рейки -->
+			<g class="marker-container quest-path quest-path-4" transform="translate(1004,658)">
 					<use href="#man-marker" width="60" height="70" color="#4061ef"/>
-			</g> -->
+			</g>
 			
 			
             
