Add specific files via script

--- a/guide/guide.html
+++ b/guide/guide.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Энциклопедия выживания</title>
 	<meta name="description" content="">
 	<meta name="keywords" content=" ">
@@ -38,23 +39,23 @@
   <h2 class="guides-title">Руководства и советы</h2>
   <ul class="guides-list">
     <li class="guides-item">
-      <a href="#" onclick="SelectGuideSection('7081744', 'changeHash'); return false;" class="guides-link">
-         Управление и горячие клавиши
+      <a href="#" onclick="SelectGuideSection('7590243', 'changeHash'); return false;" class="guides-link">
+         Русификатор
       </a>
     </li>
     <li class="guides-item">
-      <a href="#" onclick="SelectGuideSection('7081702', 'changeHash'); return false;" class="guides-link">
-         Карта и важные места
+      <a href="#" onclick="SelectGuideSection('7081744', 'changeHash'); return false;" class="guides-link">
+         Управление
       </a>
     </li>
     <li class="guides-item">
       <a href="#" onclick="SelectGuideSection('7082316', 'changeHash'); return false;" class="guides-link">
-         Вербовка туземцев - создание общины
+         Захват туземцев
       </a>
     </li>
     <li class="guides-item">
       <a href="#" onclick="SelectGuideSection('7082287', 'changeHash'); return false;" class="guides-link">
-        Мораль
+        Основные характеристики
       </a>
     </li>
     <li class="guides-item">
@@ -89,7 +90,7 @@
     </li>
     <li class="guides-item">
       <a href="#" onclick="SelectGuideSection('7082162', 'changeHash'); return false;" class="guides-link">
-        Рейд и похищение
+        Рейды и похищения
       </a>
     </li>
     <li class="guides-item">
@@ -117,26 +118,21 @@
         Коды и ID предметов
       </a>
     </li>
-    <li class="guides-item">
-      <a href="#" onclick="SelectGuideSection('7590243', 'changeHash'); return false;" class="guides-link">
-         Русификатор + антицензор
-      </a>
-    </li>
   </ul>
 </div>
 
 	
-	<nav class="main-nav">
-		<div class="nav-container">
-			<div class="nav-title">Энциклопедия выживания</div>
-			<div class="nav-links">
-				<a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
-				<a href="https://mifiliya.github.io/" class="nav-link">Энциклопедия</a>
-				<a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
-			</div>
-		</div>
-	</nav>
-	
+<nav class="main-nav">
+  <div class="nav-container">
+    <div class="nav-title">Энциклопедия выживания</div>
+    <div class="mobile-menu-toggle">☰</div>
+    <div class="nav-links">
+      <a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
+      <a href="https://mifiliya.github.io/" class="nav-link">Энциклопедия</a>
+      <a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
+    </div>
+  </div>
+</nav>
 		
 			
 			
