--- a/guide/guide.html
+++ b/guide/guide.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Энциклопедия выживания</title>
+	<title>Руководства</title>
 	<meta name="description" content="">
 	<meta name="keywords" content=" ">
 	<link rel="stylesheet" href="../css/guide.css">
@@ -124,7 +124,7 @@
 	
 <nav class="main-nav">
   <div class="nav-container">
-    <div class="nav-title">Энциклопедия выживания</div>
+    <div class="nav-title">Руководства</div>
     <div class="mobile-menu-toggle">☰</div>
     <div class="nav-links">
       <a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
