Add specific files via script

--- a/guides/guide.html
+++ b/guides/guide.html
@@ -39,7 +39,7 @@
   <h2 class="guides-title">Руководства и советы</h2>
   <ul class="guides-list">
     <li class="guides-item">
-      <a href="" class="guides-link">
+      <a href="localization.html" class="guides-link">
         Русификатор
       </a>
     </li>
@@ -85,7 +85,7 @@
     </li>
     <li class="guides-item">
       <a href="natives-work.html" class="guides-link">
-        Работа туземцев
+        Туземцы-рабочие
       </a>
     </li>
     <li class="guides-item">
@@ -115,7 +115,7 @@
     </li>
     <li class="guides-item">
       <a href="item-ids.html" class="guides-link">
-        Коды и ID предметов
+        ID предметов и команды
       </a>
     </li>
   </ul>
