Add specific files via script

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<div class="nav-title">Интерактивная карта</div>
 			<div class="nav-links">
 				<a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
-				<a href="https://mifiliya.github.io/" class="nav-link">Гайды</a>
+				<a href="https://mifiliya.github.io/guides/guide.html" class="nav-link">Руководства</a>
 				<a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
 			</div>
 		</div>
