--- a/guides/guide.html
+++ b/guides/guide.html
@@ -128,7 +128,7 @@
     <div class="mobile-menu-toggle">☰</div>
     <div class="nav-links">
       <a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
-      <a href="https://mifiliya.github.io/" class="nav-link">Энциклопедия</a>
+      <a href="https://mifiliya.github.io/guides/guide.html" class="nav-link">Руководства</a>
       <a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
     </div>
   </div>
