Add specific files via script

--- a/guides/guide.html
+++ b/guides/guide.html
@@ -39,6 +39,11 @@
   <h2 class="guides-title">Руководства и советы</h2>
   <ul class="guides-list">
     <li class="guides-item">
+      <a href="test.html" class="guides-link">
+        Моды и DLC
+      </a>
+    </li>
+    <li class="guides-item">
       <a href="localization.html" class="guides-link">
         Русификатор
       </a>
