--- a/guides/mods.html
+++ b/guides/mods.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Руины</title>
+	<title>Моды</title>
 	<meta name="description" content="">
 	<meta name="keywords" content=" ">
 	<link rel="stylesheet" href="../css/guide.css">
@@ -36,14 +36,30 @@
 </div>
 
 	<div class="content">
-  <h2 class="guides-title">Статья в процессе создания...</h2>
+  <h2 class="guides-title">Моды и DLC</h2>
+
+  <p>Мод фиксит баги</p>
+  <p>Руководство</p>
+  <p>Фикс перемещение предметов (теперь цвет предмета после перемещения не будет зеленым)</p>
+  <p>Фикс текста сверху (теперь после сообщения сверху текст будет исчезать через некоторое время)</p>
+  <p>BugFixes</p>
+
+  <
+
+  
+
+  
+
+ 
+
+  
   
 </div>
 
 	
 <nav class="main-nav">
   <div class="nav-container">
-    <div class="nav-title">Руины</div>
+    <div class="nav-title">Моды и DLC</div>
     <div class="mobile-menu-toggle">☰</div>
     <div class="nav-links">
       <a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
