--- a/guides/relationships.html
+++ b/guides/relationships.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Отношения</title>
+	<title>Развитие отношений</title>
 	<meta name="description" content="">
 	<meta name="keywords" content=" ">
 	<link rel="stylesheet" href="../css/guide.css">
@@ -103,11 +103,11 @@
 	
 <nav class="main-nav">
   <div class="nav-container">
-    <div class="nav-title">Отношения</div>
+    <div class="nav-title">Развитие отношений</div>
     <div class="mobile-menu-toggle">☰</div>
     <div class="nav-links">
       <a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
-      <a href="https://mifiliya.github.io/" class="nav-link">Энциклопедия</a>
+      <a href="https://mifiliya.github.io/guides/guide.html" class="nav-link">Руководства</a>
       <a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
     </div>
   </div>
