--- a/guides/guide.html
+++ b/guides/guide.html
@@ -133,6 +133,7 @@
     <div class="mobile-menu-toggle">☰</div>
     <div class="nav-links">
       <a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
+      <a href="../guides/mods.html" class="nav-link">Моды и DLC</a>
       <a href="https://mifiliya.github.io/guides/guide.html" class="nav-link">Руководства</a>
       <a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
     </div>
