--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 			<div class="nav-title">Интерактивная карта</div>
 			<div class="nav-links">
 				<a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
+				<a href="../guides/mods.html" class="nav-link">Моды и DLC</a>
 				<a href="https://mifiliya.github.io/guides/guide.html" class="nav-link">Руководства</a>
 				<a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
 			</div>
