Add specific files via script

--- a/guides/mods.html
+++ b/guides/mods.html
@@ -44,8 +44,8 @@
     <a href="#" class="mod-link">Разблокировка R-сцен во время сна и беременности</a>
   <div class="hidden-content">
     <div class="buttons-wrapper">
-      <a href="../mods/UnlockSex.dll" class="author-btn">Автор: Неизвестен</a>
-      <a href="#" class="download-btn">▼ ЗАГРУЗИТЬ (v1.0, 5 KB)</a>
+      <a href="#" class="author-btn">Автор: Неизвестен</a>
+      <a href="../mods/UnlockSex.dll" class="download-btn">▼ ЗАГРУЗИТЬ (v1.0, 5 KB)</a>
       <a href="../guides/install_mod.html" class="install-guide-btn">КАК УСТАНОВИТЬ МОД</a>
     </div>
     
