Add specific files via script

--- a/guide/guide.html
+++ b/guide/guide.html
@@ -129,7 +129,7 @@
     <div class="nav-links">
       <a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
       <a href="https://mifiliya.github.io/" class="nav-link">Энциклопедия</a>
-      <a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
+      <a href="https://t.me/+D6jxno7e0fxkMWRi" class="nav-link">Телеграм</a>
     </div>
   </div>
 </nav>
