--- a/guides/guide.html
+++ b/guides/guide.html
@@ -135,7 +135,7 @@
       <a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
       <a href="../guides/mods.html" class="nav-link">Моды и DLC</a>
       <a href="https://mifiliya.github.io/guides/guide.html" class="nav-link">Руководства</a>
-      <a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
+      <a href="https://t.me/+D6jxno7e0fxkMWRi" class="nav-link">Телеграм</a>
     </div>
   </div>
 </nav>
