--- a/guides/mods.html
+++ b/guides/mods.html
@@ -210,7 +210,7 @@
     <div class="nav-links">
       <a href="https://mifiliya.github.io/" class="nav-link">Карта</a>
       <a href="https://mifiliya.github.io/guides/guide.html" class="nav-link">Руководства</a>
-      <a href="https://t.me/Mifiliya" class="nav-link">Телеграм</a>
+      <a href="https://t.me/+D6jxno7e0fxkMWRi" class="nav-link">Телеграм</a>
     </div>
   </div>
 </nav>
